force-app/main/default/objects/Sales_Funnel_Snapshot__c/Sales_Funnel_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Sales Funnel Snapshot</label>
    <nameField>
        <label>Sales Funnel Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Funnel Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>