force-app/main/default/objects/Sales_Funnel_Snapshot__c/fields/POC_ROR__c.field-meta.xml
<CustomField>
    <fullName>POC_ROR__c</fullName>
    <label>POC/ROR - Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>