force-app/main/default/objects/Sales_Funnel_Snapshot__c/fields/Record_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Text__c</fullName>
    <label>Record Type Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>