force-app/main/default/objects/Sales_Funnel_Snapshot__c/fields/Regional_VP_Notes__c.field-meta.xml
<CustomField>
    <fullName>Regional_VP_Notes__c</fullName>
    <label>Regional VP Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>