force-app/main/default/objects/Sales_Funnel_Snapshot__c/fields/Sale_Category__c.field-meta.xml
<CustomField>
    <fullName>Sale_Category__c</fullName>
    <label>Sale Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>